--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             .bio-container {
                 flex-direction: column;
             }
+            .bio-text {
+                order: 2;
+            }
         }
 
         .bio-container img {
@@ -399,7 +402,7 @@
                     </div>
                     <div class="contact-item">
                         <span><img src="assets/github_icon.png" alt="Linkedin" width="30" height="30"></span>
-                        <span><a href="https://francescoantici.github.io" style="color: inherit; text-decoration: none;"
+                        <span><a href="https://github.com/francescoantici" style="color: inherit; text-decoration: none;"
                                 target="_blank">GitHub</a></span>
                     </div>
                     <div class="contact-item">
