--- a/index.html
+++ b/index.html
@@ -100,15 +100,6 @@
             margin: auto;
         }
 
-        /* On mobile: Stack in a column */
-        @media (max-width: 768px) {
-            .bio-container {
-                flex-direction: column;
-            }
-            .bio-text {
-                order: 2;
-            }
-        }
 
         .bio-container img {
             width: 250px;
@@ -363,6 +354,15 @@
         }
 
         @media (max-width: 768px) {
+            .bio-container {
+                flex-direction: column;
+            }
+            .bio-text {
+                order: 2;
+            }
+            .bio-container img {
+                align-self: center;
+            }
             .header h1 {
                 font-size: 2.5em;
             }
