--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
         }
 
         @media (max-width: 768px) {
+            .bio-text p {
+                font-size: 1.1em;
+            }
             .bio-container {
                 flex-direction: column;
             }
